fix z-index

--- a/public/css/relayout.css
+++ b/public/css/relayout.css
@@ -34,6 +34,7 @@
 	left: 0;
 	width: 20%;
 	height: 80%;
+	z-index: 2;
 }
 .wfv-wrapper-middle{
 	position: absolute;
@@ -42,6 +43,7 @@
 	width: 45%;
 	height: 80%;
 	background-color: #666666; 
+	z-index: 2;
 }
 .wfv-wrapper-right-top{
 	position: absolute;
@@ -50,6 +52,7 @@
 	width: 35%;
 	height: 50%;
 	background-color: #999999; 
+	z-index: 2;
 }
 .wfv-wrapper-right-bottom{
 	position: absolute;
@@ -58,6 +61,7 @@
 	width: 35%;
 	height: 50%;
 	background-color: #41B8B5; 
+	z-index: 2;
 }
 .wfv-wrapper-bottom{
 	position: absolute;
@@ -66,6 +70,7 @@
 	width: 65%;
 	height: 20%;
 	background-color: #CECECE; 
+	z-index: 2;
 }
 
 .wfv-view-wrapper-default{
